[package]
name = "rusty_meter"
version = "0.1.0"
authors = ["Markus Krause <Krause.Markus@gmx.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
# remove until PR merged egui-dropdown = "0.7.0"
egui-dropdown = "0.9.0"
image = { version = "0.25.1", features = ["jpeg", "png"] }
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
epaint = "0.27.2"
egui_plot = "0.27.2"
log = "0.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
urlencoding = "2.1.3"
subprocess = "0.2.9"
serde_json = "1.0.114"
regex = "1.10.3"
indexmap = "2.2.5"
downloader = "0.2.7"
tempdir = "0.3.7"
glob = "0.3.1"
arboard = "3.3.2"
mio-serial = "5.0.5"
mio = "0.8.11"
tokio = { version = "1.36.0", features = ["full"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


# [profile.release]
# opt-level = 2 # fast and small wasm

[profile.release]
opt-level = 3     # Optimize for speed without exploding size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
