[package]
name = "rusty_meter"
version = "0.3.2"
authors = ["Markus Krause <Krause.Markus@gmx.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",           # for Linux
    "wayland",       # for Linux  
] }
egui-dropdown = "0.13.0"
image = { version = "0.25.6", features = ["jpeg", "png"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
epaint = "0.31.1"
egui_plot = "0.31.0"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking"] }
urlencoding = "2.1.3"
subprocess = "0.2.9"
serde_json = "1.0.140"
regex = "1.11.1"
indexmap = "2.9.0"
downloader = "0.2.8"
tempfile = "3.19.1"
phf = { version = "0.11.3", features = ["macros"] }
glob = "0.3.2"
arboard = "3.5.0"
mio-serial = "5.0.6"
mio = "1.0.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.0" # For CSV output
xlsxwriter = "0.6.1" # For XLSX output
chrono = { version = "0.4.38", features = [
    "serde",
] } # For timestamp handling with serde
rfd = "0.15.0" # For file dialogs

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.49"

[build-dependencies]
# for windows icon embedding
winres = "0.1"

[profile.release]
opt-level = 3     # Optimize for speed without exploding size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
