[package]
name = "rusty_meter"
version = "0.4.5"
authors = ["Markus Krause <Krause.Markus@gmx.com>"]
edition = "2024"
rust-version = "1.92"  # when updating here, also update release.yml and rust-toolchain file

[dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",           # for Linux
    "wayland",       # for Linux  
] }
#egui-dropdown = "0.14.0"
egui-dropdown = { git = "https://github.com/markusdd/egui-dropdown.git" }
egui_dock = "0.19.1"
image = { version = "0.25.10", features = ["jpeg", "png"] }
egui_extras = { version = "0.34.1", features = ["all_loaders"] }
epaint = "0.34.1"
egui_plot = "0.35.0"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking"] }
urlencoding = "2.1.3"
subprocess = "1.0.3"
serde_json = "1.0.149"
regex = "1.12.3"
indexmap = "2.14.0"
downloader = "0.2.8"
tempfile = "3.27.0"
phf = { version = "0.13.1", features = ["macros"] }
glob = "0.3.3"
arboard = "3.6.1"
mio-serial = "5.0.6"
mio = "1.2.0"
tokio = { version = "1.52.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.4.0" # For CSV output
xlsxwriter = "0.6.1" # For XLSX output
chrono = { version = "0.4.44", features = [
    "serde",
] } # For timestamp handling with serde
rfd = "0.17.2" # For file dialogs

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.68"

[build-dependencies]
# for windows icon embedding
winres = "0.1"

[profile.release]
opt-level = 3     # Optimize for speed without exploding size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
